--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,12 @@
   box-sizing: border-box;
 }
 :root{
-  --color-131921: #131921;
-  --color-3b4149: #3b4149;
+  --color-131921: #326e51;
+  --color-3b4149: #e5fbf1;
   --color-febd69: #fafafa; 
+  --color-e5fbf1:#e5fbf1;
+  --color-ffffff: #ffffff; 
+  --color-080808: #080808;
 }
 body{
   font-family: 'Rubik', sans-serif;
@@ -26,25 +29,75 @@ a {
 .gap-15{
   gap:15px;
 }
-/* Header Part*/
+.gap-30{
+  gap:30px;
+}
+/* Header Part */
+
 .header-top-strip {
   border-bottom: 1px solid var(--color-3b4149);
   background-color: var(--color-131921);
 }
-.header-upper{
-  background-color: var(--color-131921)
+.header-upper {
+  background-color: var(--color-131921);
 }
-.header-upper .input-group-text {
-  background-color: var(--color-febd69);
-}
-.header-upper-links-d-flex {
-  display: flex;
-  align-items: center;
+.header-bottom {
+  background-color: var(--color-e5fbf1);
 }
 
-.header-upper.header-upper-links img{
+.nav-link {
+  color: #FF5733; /* Change this color to your desired color */
+  /* You can add more styles if needed */
+}
+/* Header.css */
+
+.custom-color {
+  color: #326e51;
+}
+
+
+.header-upper.header-upper-links img {
   width: 35px;
   height: 35px;
 }
+.header-bottom .menu-links a, .header-bottom .dropdown button {
+  color:#326e51;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
 
+.header-bottom .dropdown button:focus{
+  box-shadow: none;
+}
+.header-bottom .dropdown-menu{
+  background-color:  var(--color-ffffff);
+  width: 100%;
+  transform: translate3d(0px, 57px, 0px) !important;
+}
+.header-bottom .dropdown-item{
+  padding: 20px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-080808);
+}
+.header-bottom .dropdown-item:hover{
+  background-color: transparent;
+  color: var(--color-131921) !important;
+}
 /* Header End */
+
+/* Start Footer*/
+footer {
+  background-color: var(--color-131921);
+}
+
+footer:not(:first-child){
+  border-top: 1px solid rgba(255,255,255,0.1);
+}
+
+footer .input-group-text {
+  padding: 8px 17px;
+}
+/*Footer End */
