--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,23 @@
   --color-e5fbf1:#e5fbf1;
   --color-ffffff: #ffffff; 
   --color-080808: #080808;
+  --color-e01111: #e01111;
+  --color-f5f5f7: #f5f5f7;
+  --color-ededed: #ededed; 
+  --color-326e51: #131921;
+  --color-777777: #777777; 
+  --color-1c1c1b: #1c1c1b; 
+}
+.card-wrapper{
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
+.section-heading{
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 body{
   font-family: 'Rubik', sans-serif;
@@ -23,6 +40,9 @@ a {
   box-shadow: none;
   border-color: inherit;
 }
+.gap-5{
+  gap: 5px;
+}
 .gap-10{
   gap: 10px;
 }
@@ -31,6 +51,17 @@ a {
 }
 .gap-30{
   gap:30px;
+}
+.button{
+  background-color: var(--color-131921);
+  color: var(--color-ffffff);
+  font-size: 14px;
+  padding: 13px  33px;
+  border-radius: 15px;
+}
+.button:hover{
+  background-color: var(--color-3b4149);
+  color:#326e51;
 }
 /* Header Part */
 
@@ -100,4 +131,244 @@ footer:not(:first-child){
 footer .input-group-text {
   padding: 8px 17px;
 }
+
+.social_icons {
+  display: flex;
+  justify-content: space-between; /* Equal spacing between icons */
+  width: 20px; /* Adjust the width as needed */
+}
+
+.social_icons a {
+  text-decoration: none;
+  padding: 5px; /* Add padding as needed */
+}
+
+.social_icons img {
+  width: 40 px; /* Set the desired width for your icons */
+  height: 40px; /* Set the desired height for your icons */
+}
+
 /*Footer End */
+
+/*Home start*/
+.main-banner-content{
+  top: 15%;
+  left: 5%;
+}
+.main-banner-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-e01111);
+  margin: 0 0 12px;
+  letter-spacing: .3px;
+  text-transform: uppercase;
+}
+.main-banner-content h5{
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+.main-banner-content p{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-ffffff);
+}
+.small-banner-content{
+  top: 25%;
+  left: 10%;
+}
+.smail-banner-content h4{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-e01111);
+  margin: 0 0 12px;
+  letter-spacing: .3px;
+  text-transform: uppercase;
+}
+.smail-banner-content h5{
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+.smail-banner-content p{
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-ffffff);
+}
+.small-banner{
+  width: 49%;
+}
+/*Home wrapper 2*/
+.home-wrapper-2{
+  background-color: var(--color-f5f5f7);
+}
+/*Home wrapper 2 end*/
+/*categories section*/
+.categories{
+  background-color: white;
+  box-shadow: 0 0 10ox #0000001a; 
+  padding: 15px;
+}
+.categories > div{
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+.categories>div>div{
+  width: 60%;
+}
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4){
+  border-bottom: 1px solid var(--color-ededed);
+}
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3){
+  border-right: 1px solid var(--color-ededed);
+}
+
+.categories>div:nth-child(5),
+.categories>div:nth-child(6),
+.categories>div:nth-child(7){
+  border-right: 1px solid var(--color-ededed);
+}
+
+/*categories section end*/
+/*Home end*/
+
+/*Blog Start*/
+.blog-card{
+  background-color: white;
+  border-radius: 10px;
+}
+.blog-card img{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.blog-content{
+  padding: 15px;
+}
+.blog-content date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-131921);
+  padding: 0;
+}
+.blog-content h5{
+  font-size: 18px;
+  color: var(--color-326e51);
+}
+.blog-content p.desc{
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+/*Blog end*/
+
+/*Product Card*/
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.product-card .product-image {
+  height: 270px;
+}
+.product-card .product-image img{
+  object-fit: contain;
+  transition: 0.3s;
+}
+.product-card .product-image>img:last-child{
+  display: none;
+
+}
+.product-card:hover .product-image > img:nth-child(1){
+  display: none;
+  transition: 0.3s;
+}
+.product-card:hover .product-image > img:last-child{
+  display: block;
+  transition: 0.3s;
+}
+.product-card:hover .action-bar{
+  right: 15px;
+
+}
+.product-card .product-detail h6{
+color: var(--color-e01111);
+font-size: 13px;
+}
+.product-card .product-detail h5{
+  font-size: 15px;
+  color: var(--color-131921);
+}
+.product-card .product-detail p.price{
+  font-size: 16px;
+  color: var(--color-1c1c1b) !important;
+}
+.action-bar{
+  top: 10%;
+  right: -23px;
+  transition: 0.3s;
+}
+.wishlist-icon{
+  top: 2% ;
+  right: 15px;
+}
+/*Product Card End */
+
+/*Flash Sale Product Card Start*/
+.flash-sale-product-card{
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+}
+.flash-sale-product-card .badge{
+  background-color: #eb353b00 ;
+}
+/*Flash Sale Product Card End*/
+
+/*Famous card*/
+.famous-card .famous-content{
+  top: 10%;
+  left: 5%;
+}
+.famous-card img{
+  border-radius: 10px;
+}
+.famous-content h5{
+  font-size: 13px;
+  line-height: 20px ;
+  font-weight: 400px;
+  color: #000000;
+  margin-bottom: 7px;
+  text-transform: uppercase;
+}
+.famous-content h6{
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+  color: #000000;
+}
+.famous-content p{
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 100;
+  color: #000000;
+}
+
+
+/*Famous card end */
